# ai-risk-control-agent-for-mt5

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  context.md  pyproject.toml  requirements.txt
.agents/evaluations/: 1.md
.agents/memory/: README.md  repo.md
.agents/softare-engineer-skill/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: memory.instructions.md
app/: __init__.py  __main__.py  api.py  callback.py  config.py  engine.py  llm.py  logging_config.py  main.py  openapi.yaml  schemas.py
app/api/: __init__.py  deps.py  middleware.py  routes.py
app/db/: __init__.py  client.py  history.py  init.py  raw_pulls.py  repo.py
app/history/: __init__.py  aggregator.py
app/ingest/: __init__.py  alex_client.py
app/jobs/: __init__.py  scan_job.py  scheduler.py
app/llm/: __init__.py  evaluator.py  prompts.py
docs/: build_risk_brief_pdf.py  build_rules_pdf.py
done-todos/: 2026-05-09-done-todos.md  2026-05-09-model-selection.md  2026-05-09-review-fixes.md  evaluation-report.md  final-target-schema.md
scripts/: benchmark_models.py
tests/: __init__.py  conftest.py  fixtures.py  test_aggregator.py  test_alex_client.py  test_analysis_service.py  test_callback.py  test_db.py  test_e2e_mock.py  test_endpoint.py  test_engine.py  test_filtering.py  test_high_risk_gate.py  test_llm_prompt.py  test_openapi.py  test_prescreen.py  test_raw_pulls.py  test_request_logging.py  test_response_shape.py  test_risks.py  test_routes.py  test_run_scan_endpoint.py  test_scan_job.py  test_schemas.py  test_score.py  test_scoring.py
(+75 files in other folders)
